--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,14 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-core</artifactId>
+		    <version>2.8.3</version><!--$NO-MVN-MAN-VER$-->
+		</dependency>
+		
 	</dependencies>
+	
 
 	<build>
 		<plugins>
